feat: kinda working i guess

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,6 +5,8 @@
               android:layout_height="match_parent"
               android:gravity="center_horizontal|center_vertical"
               android:orientation="vertical"
+              android:textAlignment="center"
+
               tools:context=".GameActivity">
 
     <TextView
@@ -12,8 +14,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Game Name"
-            android:textSize="24sp"
-            android:paddingTop="20dp"
+            android:textSize="28sp"
+            android:layout_marginTop="20dp"
             android:layout_weight="0"
     />
 
@@ -23,7 +25,8 @@
             android:layout_height="wrap_content"
             android:text="status"
             android:textSize="20sp"
-            android:paddingVertical="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="0"
     />
 
@@ -32,14 +35,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="100"
             android:id="@+id/buttonsLayout"
-            android:background="#F00"
             android:gravity="center_horizontal|center_vertical"
     >
         <com.marcoantonioaav.lobogames.ui.BoardView
                 android:id="@+id/boardView"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="#FF00FF00"
         />
     </RelativeLayout>
 
@@ -50,12 +51,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_weight="0"
-            android:paddingTop="15dp"
+            android:layout_marginTop="10dp"
     >
         <Button
                 android:id="@+id/replay"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:textSize="16sp"
                 android:contentDescription="Visualizar Replay"
                 android:text="Visualizar\nReplay"
                 android:layout_marginRight="15dp"
@@ -65,6 +67,7 @@
                 android:id="@+id/replayTest"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:textSize="16sp"
                 android:contentDescription="Salvar Replay"
                 android:text="Salvar\nReplay"
         />
@@ -75,12 +78,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_weight="0"
-            android:paddingBottom="15dp"
+            android:layout_marginBottom="20dp"
     >
         <Button
                 android:id="@+id/playAgain"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:textSize="16sp"
                 android:contentDescription="Recomeçar jogo"
                 android:text="Recomeçar\nJogo"
                 android:layout_marginRight="15dp"/>
@@ -89,6 +93,7 @@
                 android:id="@+id/back"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:textSize="16sp"
                 android:contentDescription="Voltar ao menu"
                 android:text="Voltar\nao menu"
                 android:visibility="visible"
