--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -8,12 +8,12 @@
               tools:context=".GameActivity">
 
     <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="100"
+            android:layout_weight="20"
             android:orientation="vertical"
             android:gravity="center_horizontal|center_vertical"
-            android:paddingTop="20dp"
+            android:paddingTop="15dp"
     >
 
         <TextView
@@ -38,8 +38,8 @@
 
     <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
+            android:layout_height="0dp"
+            android:layout_weight="80"
             android:id="@+id/buttonsLayout"
             android:gravity="center_horizontal|center_vertical"
     >
