--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -59,7 +59,7 @@
                 android:gravity="center_horizontal"
         >
             <Button
-                    android:id="@+id/replay"
+                    android:id="@+id/playReplay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
@@ -69,7 +69,7 @@
             />
 
             <Button
-                    android:id="@+id/replayTest"
+                    android:id="@+id/saveReplay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
