--- a/app/src/main/res/layout/replay_list_item.xml
+++ b/app/src/main/res/layout/replay_list_item.xml
@@ -14,5 +14,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="20dp"
+            android:textSize="20sp"
     />
 </LinearLayout>
