--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -14,6 +14,7 @@
             android:orientation="vertical"
             android:gravity="center_horizontal|center_vertical"
             android:paddingTop="15dp"
+            android:id="@+id/statusLayout"
     >
 
         <TextView
