--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -43,6 +43,7 @@
             android:layout_height="0dp"
             android:layout_weight="85"
             android:id="@+id/buttonsLayout"
+            android:background="#0f0"
     >
 
         <LinearLayout
@@ -57,17 +58,20 @@
                     android:id="@+id/topOutOfBoardPositionsView"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
+                    android:background="@color/teal_200"
                     android:visibility="gone"
             />
             <com.marcoantonioaav.lobogames.ui.BoardView
                     android:id="@+id/boardView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#f0f"
             />
             <com.marcoantonioaav.lobogames.ui.OutOfBoardPositionsView
                     android:id="@+id/bottomOutOfBoardPositionsView"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
+                    android:background="@color/purple_500"
                     android:visibility="gone"
             />
 
