--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,10 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
-            android:layout_height="180dp"
+            android:layout_height="250dp"
             android:layout_marginBottom="20dp"
-            android:contentDescription="@string/app_name"
-            app:srcCompat="@drawable/lobogames" />
+            android:contentDescription="LoBoards"
+            app:srcCompat="@drawable/loboards" />
 
         <Button
             android:id="@+id/buttonGames"
