--- a/app/src/main/res/layout/activity_pre_game.xml
+++ b/app/src/main/res/layout/activity_pre_game.xml
@@ -31,7 +31,7 @@
             android:layout_weight="100"
             android:divider="#000"
             android:dividerHeight="2px"
-            android:listSelector="#0f0"
+            android:listSelector="@color/orange"
             android:footerDividersEnabled="true"
             android:headerDividersEnabled="true"
     />
